src/test/compile-fail/bad-recv.rs
// error-pattern: mismatched types

fn main() {
  10 |> 10;
}